hydroflow/tests/snapshots/surface_join__join_empty_lhs@graphvis_dot.snap
---
source: hydroflow/tests/surface_join.rs
expression: hf.meta_graph().unwrap().to_dot()
---
digraph {
    subgraph "cluster n1v1" {
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n3v1 [label="(n3v1) null()", fontname=Monaco, shape=invhouse, style = filled, color = "#0022ff", fontcolor = "#ffffff"]
        n4v1 [label="(n4v1) repeat_iter(1..)", fontname=Monaco, shape=invhouse, style = filled, color = "#0022ff", fontcolor = "#ffffff"]
        n5v1 [label="(n5v1) map(|x| (x, x))", fontname=Monaco, shape=invhouse, style = filled, color = "#0022ff", fontcolor = "#ffffff"]
        n1v1 [label="(n1v1) join::<'tick, 'tick>()", fontname=Monaco, shape=invhouse, style = filled, color = "#0022ff", fontcolor = "#ffffff"]
        n2v1 [label="(n2v1) for_each(|x: (u32, (u32, u32))| result_send.send(x.1).unwrap())", fontname=Monaco, shape=house, style = filled, color = "#ffff00"]
        n3v1 -> n1v1 [label="0"]
        n4v1 -> n5v1
        n5v1 -> n1v1 [label="1"]
        n1v1 -> n2v1
        subgraph "cluster sg_1v1_var_join_node" {
            label="var join_node"
            n1v1
            n2v1
        }
    }
}

